k8s/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saferx-backend-service
  namespace: saferx
spec:
  type: ClusterIP
  selector:
    app: saferx-backend
  ports:
    - port: 8000
      targetPort: 8000
