k8s/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saferx-frontend-service
  namespace: saferx
spec:
  type: ClusterIP
  selector:
    app: saferx-frontend
  ports:
    - port: 80
      targetPort: 80
